syntax = "proto3";

import "global.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";
option java_outer_classname = "AfterSalesServiceOuterClass";

service AfterSalesService {
    // 提交售后单
    rpc SubmitAfterSalesOrder (SubmitAfterSalesOrderRequest) returns (SubmitAfterSalesOrderResponse) {
    }

    // 获取订单的所有售后单,orderId
    rpc GetAllAfterSalesOrderOfSaleOrder (OriginOrderIdRequest) returns (AfterSalesOrderListResponse) {
    }

    // 获取会员的分页售后单
    rpc QueryPagerAfterSalesOrderOfMember (PagingBuyerOrdersRequest) returns (PagingBuyerAfterSalesOrderListResponse) {
    }

    // 获取商户的分页售后单
    rpc QueryPagerAfterSalesOrderOfVendor (PagingSellerOrdersRequest) returns (PagingSellerAfterSalesOrderListResponse) {
    }

    // 获取售后单
    rpc GetAfterSaleOrder (Int64) returns (SAfterSalesOrder) {
    }

    // 同意售后
    rpc AgreeAfterSales (IdAndRemark) returns (Result) {
    }

    // 拒绝售后
    rpc DeclineAfterSales (IdAndRemark) returns (Result) {
    }

    // 申请调解
    rpc RequestIntercede (Int64) returns (Result) {
    }

    // 系统确认
    rpc ConfirmAfterSales (Int64) returns (Result) {
    }

    // 系统退回
    rpc RejectAfterSales (IdAndRemark) returns (Result) {
    }

    // 处理退款/退货完成,一般是系统自动调用
    rpc ProcessAfterSalesOrder (Int64) returns (Result) {
    }

    // 售后收货
    rpc ReceiveReturnShipment (Int64) returns (Result) {
    }

    // 换货发货
    rpc ExchangeShipment (ExchangeShipmentRequest) returns (Result) {
    }

    // 换货收货
    rpc ReceiveExchange (Int64) returns (Result) {
    }

}

enum EAfterSalesType {
    // 默认
    TypeUnset = 0;
    // 退款申请(部分退款)
    TypeRefund = 1;
    // 退货
    TypeReturn = 2;
    // 换货
    TypeExchange = 3;
    // 服务/维修
    TypeService = 4;
}

// 原实际销售的订单编号
message OriginOrderIdRequest {
    int64 order_id = 1;
}

message SubmitAfterSalesOrderRequest {
    int64 order_id = 1;
    EAfterSalesType after_sales_type= 2;
    int64 item_snapshot_id = 3;
    int64 quantity = 4;
    string reason = 5;
    string image_url = 6;
}

message SubmitAfterSalesOrderResponse {
    int64 err_code = 1;
    string err_msg = 2;
    int64 after_sales_order_id = 3;
}

message AfterSalesOrderListResponse {
    repeated SAfterSalesOrder value =  1;
}

message PagingBuyerOrdersRequest {
    int64 buyer_id = 1;
    SPagingParams params = 2;
}

message PagingSellerOrdersRequest {
    int64 seller_id = 1;
    SPagingParams params = 2;
}

message PagingBuyerAfterSalesOrderListResponse {
    int64 total = 1;
    repeated SPagingBuyerAfterSalesOrder data = 2;
}

message PagingSellerAfterSalesOrderListResponse {
    int64 total = 1;
    repeated SPagingSellerAfterSalesOrder data = 2;
}

// 售后单
message SAfterSalesOrder {
    // 编号
    int64 id = 1;
    // 订单编号
    int64 relate_order_id = 2;
    // 运营商编号
    int64 vendor_id = 3;
    // 购买者编号
    int64 buyer_id = 4;
    // 类型，退货、换货、维修
    int32 after_sales_type= 5;
    // 退货的商品项编号
    int64 snapshot_id = 6;
    // 商品数量
    int32 quantity = 7;
    // 售后原因
    string reason = 8;
    // 商品售后图片凭证
    string image_url = 9;
    // 联系人
    string person_name = 10;
    // 联系电话
    string person_phone = 11;
    // 退货的快递服务商编号
    string return_sp_name = 12;
    // 退货的快递单号
    string return_sp_order = 13;
    // 退货凭证
    string return_sp_image = 14;
    // 备注(系统)
    string remark = 15;
    // 运营商备注
    string vendor_remark = 16;
    // 售后单状态
    int32 state = 17;
    // 提交时间
    int64 create_time = 18;
    // 更新时间
    int64 update_time = 19;
    // 订单状态
    string state_text = 20;
}

message SPagingBuyerAfterSalesOrder {
    // 编号
    int64 id = 1;
    // 订单编号
    string order_no =  2;
    // 运营商编号
    int64 vendor_id = 3;
    // 运营商名称
    string seller_name = 4;
    // 类型，退货、换货、维修
    int32 after_sales_type= 5;
    // 退货的商品项编号
    int64 snapshot_id = 6;
    // 商品数量
    int32 quantity = 7;
    int64 sku_id = 8;
    string item_title = 9;
    string item_image = 10;
    // 售后单状态
    int32 state = 11;
    // 提交时间
    int64 create_time = 12;
    // 更新时间
    int64 update_time = 13;
    // 订单状态
    string state_text = 14;
}

// 分页商户售后单
message SPagingSellerAfterSalesOrder {
    // 编号
    int64 id = 1;
    // 订单编号
    string order_no =  2;
    // 会员编号
    int64 buyer_id = 3;
    // 会员名称
    string buyer_name = 4;
    // 类型，退货、换货、维修
    int32 after_sales_type= 5;
    // 退货的商品项编号
    int64 snapshot_id = 6;
    // 商品数量
    int32 quantity = 7;
    int64 sku_id = 8;
    string item_title = 9;
    string item_image = 10;
    // 售后单状态
    int32 state = 11;
    // 提交时间
    int64 create_time = 12;
    // 更新时间
    int64 update_time = 13;
    // 订单状态
    string state_text = 14;
}

message ExchangeShipmentRequest {
    int64 id = 1;
    string sp_name = 2;
    string sp_order = 3;
}