syntax = "proto3";

import "global.proto";
import "message/order_dto.proto";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

service QueryService {
    // 获取分页店铺数据
    rpc PagingShops (QueryPagingShopRequest) returns (QueryPagingShopsResponse);
    // 查询分页普通订单
    rpc MemberNormalOrders (MemberOrderPagingRequest) returns (MemberOrderPagingResponse) {
    }
    // 查询分页批发订单
    rpc QueryWholesaleOrders (MemberOrderPagingRequest) returns (MemberOrderPagingResponse) {
    }
    // 查询分页交易/服务类订单
    rpc QueryTradeOrders (MemberOrderPagingRequest) returns (MemberOrderPagingResponse) {
    }
    // 查询会员列表
    rpc QueryMemberList (MemberListRequest) returns (MemberListResponse) {
    }
    // 查询会员列表
    rpc SearchMembers (MemberSearchRequest) returns (MemberListResponse) {
    }
    // 获取分页店铺收藏
    rpc QueryMemberFavoriteShops (FavoriteQueryRequest) returns (PagingShopFavoriteResponse) {
    }
    // 获取分页店铺收藏
    rpc QueryMemberFavoriteGoods (FavoriteQueryRequest) returns (PagingGoodsFavoriteResponse) {
    }
}

message FavoriteQueryRequest {
    int64 MemberId = 1;
    int64 begin = 2;
    int64 end = 3;
    string where = 4;
}

message PagingShopFavoriteResponse {
    int64 total = 1;
    repeated SPagingShopFavorite Data = 2;
}

message SPagingShopFavorite {
    int64 Id = 1;
    int64 ShopId = 2;
    string ShopName = 3;
    string Logo = 4;
    int64 UpdateTime = 5;
}
message PagingGoodsFavoriteResponse {
    int64 total = 1;
    repeated SPagingGoodsFavorite Data = 2;
}
message SPagingGoodsFavorite {
    int64 Id = 1;
    int64 SkuId = 2;
    string GoodsName = 3;
    string Image = 4;
    bool OnShelves = 5;
    int32 StockNum = 6;
    string SalePrice = 7;
    int64 UpdateTime = 8;
}

message QueryPagingShopRequest {
    // 参数
    SPagingParams Params = 1;
    // 是否只查询营业中的店铺
    bool OnlyBusiness = 2;
}

message QueryPagingShopsResponse {
    sint64 total = 1;
    repeated QueryPagingShop Value =  2;
}

message QueryPagingShop {
    sint64 Id = 1;
    string Name = 2;
    string Alias = 3;
    string Host = 4;
    string Logo = 5;
    sint64 CreateTime = 6;
}

message MemberOrderPagingRequest {
    sint64 MemberId = 1;
    SPagingParams Params = 2;
}
message MemberOrderPagingResponse {
    sint64 Total = 1;
    repeated SMemberPagingOrder Value =  2;
}

// 分页会员订单信息
message SMemberPagingOrder {
    // 订单号
    string OrderNo = 1;
     // 买家
    int64 BuyerId = 2;
    // 买家用户名
    string BuyerUser = 3;
    // 店铺编号
    int64 ShopId = 4;
    // 店铺名称
    string ShopName = 5;
    // 商品
    int64 ItemCount = 6;
    // 商品总金额
    int64 ItemAmount = 7;
    // 抵扣金额
    int64 DiscountAmount = 8;
    // 优惠金额
    int64 DeductAmount = 9;
    // 快递费
    int64 ExpressFee = 10;
    // 包装费
    int64 PackageFee = 11;
    // 最终金额
    int64 FinalAmount = 12;
    // 商品列表
    repeated SOrderItem Items = 13;
    // 状态
    sint32 Status = 14;
    // 状态文本
    string StatusText = 15;
    // 下单时间
    sint64 CreateTime = 16;
}

message MemberListRequest {
    repeated int64 IdList = 1;
}

message MemberSearchRequest {
    // 手机号/邮箱/用户名关键词
    string Keyword = 1;
}
message MemberListResponse {
    repeated MemberListSingle Value =  1;
}
// 会员概览信息
message MemberListSingle {
    // 会员编号
    int64 MemberId = 1;
    // 用户名
    string user =  2;
    // 昵称
    string NickName = 3;
    // 头像
    string Avatar = 4;
    // 等级
    int32 Level = 5;
    // 积分
    int64 Integral = 6;
    // 账户余额
    int64 Balance = 7;
    // 钱包余额
    int64 WalletBalance = 8;
    //    GrowBalance       int64 `db:"grow_balance"`
    //    GrowAmount        int64 `db:"grow_amount"`         // 理财总投资金额,不含收益
    //    GrowEarnings      int64 `db:"grow_earnings"`       // 当前收益金额
    //    GrowTotalEarnings int64 `db:"grow_total_earnings"` // 累积收益金额
    //    UpdateTime        int64   `db:"update_time"`
}
